<resources>
    <string name="app_name">SchoolHelper</string>
    <string name="zusammenfassungen">Summarys</string>
    <string name="available_zusammenfassungen">Available Summarys:</string>
    <string name="back">Back</string>
    <string name="ressources">Ressources</string>
    <string name="home">Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_internet">No internet connection found! Try turning on Wi-Fi or mobile data.</string>
    <string name="french">French</string>
    <string name="adjectives">Adjectives</string>
    <string name="verbes">Verbes</string>
    <string name="times">Times</string>
    <string name="about">About</string>
    <string name="french_topics">Topics:</string>
    <string name="about_text">This app was developed by RaviAnand Mohabir (Dan6erbond) as practice for native Android Development and is intended for personal use.</string>
    <string name="website">Website</string>
    <string name="french_times">French Times</string>
    <string name="usage">Usage</string>
    <string name="formation">Formation</string>
    <string name="example">Example</string>
    <string name="french_time_fc_formation" translatable="false">je vais parler\ntu vas parler\nil/elle va parler\nnous allons parler\nvous allez parler\nils/elles vont parler</string>
    <string name="french_time_fc_example" translatable="false">- Je vais faire un voyage avec ma soeur.</string>
    <string name="share">Share</string>
    <string name="share_subject">Share Subject</string>
    <string name="share_via">Share Via:</string>
    <string name="share_text">Get the SchoolHelper App from here: https://github.com/Dan6erbond/SchoolHelper/releases</string>
    <string name="french_time_fc_usage">" - planned plans and actions"</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
